Clean existing StackRox resources in OpenShift clusters, too (stackrox/rox#4131)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1003,6 +1003,8 @@ commands:
 
             ./scripts/ci/openshift-gcr-secrets.sh
 
+
+      - remove-existing-stackrox-resources
       - *setupGoogleAppCreds
       - *setupLicense
 
