--- a/image/Dockerfile_rhel
+++ b/image/Dockerfile_rhel
@@ -32,7 +32,7 @@ COPY ./bin/compliance /stackrox/bin/
 COPY ./bin/roxctl* /assets/downloads/cli/
 COPY ./bin/kubernetes-sensor /stackrox/bin/
 COPY ./static-bin/* /stackrox/
-COPY ./restricted-ui /stackrox/ui
+COPY ./ui/build /ui/
 COPY --from=data /stackrox-data.tgze /stackrox/
 
 COPY ./THIRD_PARTY_NOTICES /licenses/THIRD_PARTY_NOTICES
