--- a/ui/package.json
+++ b/ui/package.json
@@ -87,7 +87,7 @@
     "scripts": {
         "start": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && HTTPS=true react-scripts start",
         "start:watch": "npm-run-all --parallel watch:tailwind watch:react",
-        "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && react-scripts build",
+        "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
         "lint": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src eslint src cypress",
