--- a/ui/package.json
+++ b/ui/package.json
@@ -91,12 +91,12 @@
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
         "lint": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src eslint src cypress",
-        "cypress-open": "./scripts/cypress-open.sh",
-        "cypress-demo-open": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-demo-auth-token.sh) cypress open --config integrationFolder=cypress/demo",
-        "test-e2e-local": "CYPRESS_ROX_AUTH_TOKEN=(./scripts/get-auth-token.sh) cypress run",
-        "test-e2e-ci": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
-        "test-e2e-demo-local": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-demo-auth-token.sh) cypress run --config integrationFolder=cypress/demo",
-        "test-e2e-demo-ci": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-demo-auth-token.sh) cypress run --config integrationFolder=cypress/demo --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
+        "cypress-open": "./scripts/cypress.sh open",
+        "cypress-demo-open": "./scripts/cypress.sh open --config integrationFolder=cypress/demo",
+        "test-e2e-local": "./scripts/cypress.sh run",
+        "test-e2e-ci": "./scripts/cypress.sh run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
+        "test-e2e-demo-local": "./scripts/cypress.sh run --config integrationFolder=cypress/demo",
+        "test-e2e-demo-ci": "./scripts/cypress.sh run --config integrationFolder=cypress/demo --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
         "connect": "../scripts/connect-ui.sh ${1}",
         "deploy": "../deploy/k8s/deploy.sh",
         "deploy-local": "../deploy/k8s/deploy-local.sh",
