Make the compliance daemonset fs readonly (stackrox/rox#4168)

--- a/image/templates/kubernetes/kubectl/sensor.yaml
+++ b/image/templates/kubernetes/kubectl/sensor.yaml
@@ -312,6 +312,7 @@ spec:
             memory: 10Mi
         securityContext:
           runAsUser: 0
+          readOnlyRootFilesystem: true
         volumeMounts:
         - mountPath: /etc/ssl/
           name: etc-ssl
