Rox 2333 - Add splunk integration tests.  (stackrox/rox#4062)
* Initial draft

* remove hardcoding

* Added insecure mode

* expose port 8089 for querying splunk end point

* initial

* Minor change in server conf

* remove sleep

* Addinng splunk yaml

* add hook.sh ad splunk.yaml

* remove hook.sh

* pushing latest code changes

* Add service code and query from it

* Service class code

* Integration test groovy update

* Modified the service object

* fix a type

* Add some code to get the data from splunk

* Removing some line

* add retry logic to splunk helper

* Testing

* remove comments

* remove comments

* remove comments

* remove comments

* minor refactor

* rename collector

* add delete nginx

* Review comments

* restoring type

* review comments:

* SplunkUtil use def instead of hashmap

* review comment

* remove hook.sh as it's not required

* Load balancer check

* remove unused port

* Review comments

* Committing docker file

* Refactor load balancer create code

* style checks

* Integration tests and style checks

* Add support for open shift

* fix namespace

* Reverting open shift code

* add support for create secrets, thanks visva

* fix splunk notifier error message

* Review comments

* Parser for data

* Refactor loadBalancer method

* revert open shift load balancer

* Add retry for cops tests

* add return orchestrator line back

* Keeping only necessary file changes

* add more checks

* Updating docker image

* add space

* Add a check for waiting for result key in the response

* add random name for nginx deployment for latest tag

* add some debug statements for failure in CI

* Update timeout

* remove exception handling

* Review comments

* orchestrator namespaces constants

* Latest policy tag

* add build.sh to repo: was unchecked

* Last stashed/uncommited code

* nits

* short hand kubernetes code and merge conflict

* changing namespace

* fix rebase

* Increase timeout

* rebase again

* add try and catch for Kops exc

--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -49,6 +49,7 @@ sourceSets.each { ss ->
 
 dependencies {
     // grpc and protobuf
+    compile 'com.google.code.gson:gson:2.7'
     compile "com.google.api.grpc:proto-google-common-protos:1.0.0"
     compile "io.grpc:grpc-alts:${grpcVersion}"
     compile "io.grpc:grpc-netty:${grpcVersion}"
@@ -57,7 +58,6 @@ dependencies {
     compile "io.grpc:grpc-auth:${grpcVersion}"
     compile "com.google.protobuf:protobuf-java-util:${protobufVersion}"
     compile "io.netty:netty-tcnative-boringssl-static:${nettyTcNativeVersion}"
-
 
     // Use the latest Groovy version for building this library
     compile 'org.codehaus.groovy:groovy-all:2.2.2'
