--- a/image/templates/kubernetes/helm/languagescannerchart/templates/pod-security-policy.yaml
+++ b/image/templates/kubernetes/helm/languagescannerchart/templates/pod-security-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: stackrox-scanner-psp
 rules:
   - apiGroups:
-      - extensions
+      - policy
     resources:
       - podsecuritypolicies
     resourceNames:
@@ -26,7 +26,7 @@ subjects:
     name: scanner
     namespace: {{.Values.namespace}}
 ---
-apiVersion: extensions/v1beta1
+apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: stackrox-scanner
