--- a/image/templates/kubernetes/helm/monitoringchart/templates/pod-security-policy.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/pod-security-policy.yaml
@@ -7,7 +7,7 @@ metadata:
     app: monitoring
 rules:
   - apiGroups:
-      - extensions
+      - policy
     resources:
       - podsecuritypolicies
     resourceNames:
@@ -32,7 +32,7 @@ subjects:
     name: monitoring
     namespace: {{.Values.namespace}}
 ---
-apiVersion: extensions/v1beta1
+apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: stackrox-monitoring
