Switch rolling upgrade strategy to 'Recreate' (stackrox/rox#4213)
* Switch rolling upgrade strategy to 'Recreate'

* No-op 1

* No-op 1

* WIP

--- a/image/templates/kubernetes/kubectl/sensor.yaml
+++ b/image/templates/kubernetes/kubectl/sensor.yaml
@@ -16,6 +16,8 @@ spec:
   selector:
     matchLabels:
       app: sensor
+  strategy:
+    type: Recreate
   template:
     metadata:
       namespace: stackrox
