--- a/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
   selector:
     matchLabels:
       app: central
+  strategy:
+    type: Recreate
   template:
     metadata:
       namespace: {{.Values.namespace}}
