--- a/image/templates/kubernetes/helm/scannerchart/templates/networkpolicy.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/networkpolicy.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: scanner
-  namespace: stackrox
+  namespace: {{.Values.namespace}}
   labels:
     app.kubernetes.io/name: stackrox
 spec:
@@ -13,6 +13,8 @@ spec:
             app: central
     ports:
     - port: 8080
+      protocol: TCP
+    - port: 8443
       protocol: TCP
   podSelector:
     matchLabels:
