--- a/image/templates/kubernetes/helm/scannerchart/templates/service.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/service.yaml
@@ -7,9 +7,12 @@ metadata:
     app.kubernetes.io/name: stackrox
 spec:
   ports:
-  - name: http-clairify
+  - name: https-scanner
     port: 8080
     targetPort: 8080
+  - name: grpc-scanner
+    port: 8443
+    targetPort: 8443
   selector:
     app: scanner
   type: ClusterIP
