--- a/image/templates/kubernetes/helm/scannerchart/values.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/values.yaml
@@ -5,9 +5,13 @@ namespace: stackrox
 
 image: {{.K8sConfig.ScannerImage}}
 
+dbImage: {{.K8sConfig.ScannerDBImage}}
+
 scannerSecretName: {{.K8sConfig.ScannerSecretName}}
 
 offlineMode: {{.K8sConfig.OfflineMode}}
+
+logLevel: INFO
 
 secrets:
   tls:
