Remove all references to extensions/v1beta1 (stackrox/rox#4256)

--- a/scale/mockcollector/mockcollector.yaml
+++ b/scale/mockcollector/mockcollector.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mockcollector
@@ -11,6 +11,8 @@ metadata:
 spec:
   replicas: 1
   minReadySeconds: 15
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: mockcollector
