--- a/webhookserver/server.yaml
+++ b/webhookserver/server.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -9,6 +9,8 @@ spec:
   selector:
     matchLabels:
       app: webhookserver
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
