--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@types/react": "^16.8.0",
         "apollo-cache": "^1.3.2",
         "apollo-cache-inmemory": "^1.6.3",
         "apollo-client": "^2.6.4",
@@ -81,8 +80,7 @@
         "styled-components": "^4.4.0",
         "tippy.js": "^4.3.2",
         "typeface-open-sans": "^0.0.54",
-        "typeface-open-sans-condensed": "^0.0.72",
-        "typescript": "^3.6.2"
+        "typeface-open-sans-condensed": "^0.0.72"
     },
     "scripts": {
         "start": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && HTTPS=true react-scripts start",
@@ -115,6 +113,7 @@
         "@storybook/react": "^5.2.1",
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
+        "@types/react": "^16.9.17",
         "cypress": "^3.1.5",
         "enzyme": "^3.9.0",
         "enzyme-adapter-react-16": "^1.13.2",
