--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@tippy.js/react": "^3.1.1",
         "apollo-cache": "^1.3.2",
         "apollo-cache-inmemory": "^1.6.3",
         "apollo-client": "^2.6.4",
@@ -65,7 +66,6 @@
         "react-slick": "^0.21.0",
         "react-spinners": "^0.4.5",
         "react-table": "^6.8.6",
-        "react-tippy": "^1.2.3",
         "react-toastify": "^3.4.3",
         "react-transition-group": "^4.1.0",
         "react-truncate": "^2.4.0",
@@ -79,7 +79,7 @@
         "slick-carousel": "^1.8.1",
         "store": "^2.0.12",
         "styled-components": "^4.4.0",
-        "tippy.js": "^4.3.2",
+        "tippy.js": "^5.2.1",
         "typeface-open-sans": "^0.0.54",
         "typeface-open-sans-condensed": "^0.0.72"
     },
